zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/non-exhaustive_enum_marker_assigned_a_value.zig
const A = enum {
    a,
    b,
    _ = 1,
};

// error
//
// :4:9: error: '_' is used to mark an enum as non-exhaustive and cannot be assigned a value
